# genlatex

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  Dockerfile-w-latex  README.md  buildPDFs.sh  buildTeXs.sh  buildZip.sh  clean.sh  doExport.sh  genLatex.py  main.py  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile-w-latex
example/: TLO-2v1-template.txt  TLO-EX-template.txt  tlo-EX-Data.py  tlo2v1Data.py
export/: buildManifest.py  buildZip.sh
export/output/attachment/genlatex/quizzes/contents/: README.md
export/templates/: base.xml  items.xml  manifest.xml
flaskApp/: __init__.py  ui.py
flaskApp/templates/: base.html
flaskApp/templates/ui/: index.html
genlatex/: __init__.py  convertOldStyle.py  formatters.py  genLatex.py
src/genlatex/: __init__.py  formatters.py  texData.py
tlo-2/: TLO-2v1-template.txt  clean.sh  tlo2v1Data.py
tlo-2/export/: buildManifest.py
tlo-2/export/templates/: items.xml
tlo-2v1/: tlo2v1Data.py
tlo-2v2/: TLO-2v2-template.txt  tlo2v2Data.py
utils/: buildPDFs.sh  buildTeXs.sh  clean.sh
